# STS2-KitLib

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  DevMode.csproj  DevMode.json  DevMode.sln  Directory.Build.props  KitLib.csproj  KitLib.json  KitLib.sln  Makefile  README.md  README.zh-CN.md  TODO.md  export_presets.cfg  project.godot  pyproject.toml  release.env  workshop.json
.github/: pull_request_template.md
KitLib.AI/: AiTabRegistration.cs  KitLib.AI.csproj  KitLib.AI.json  ModuleEntry.cs
KitLib.Abstractions/: KitLib.Abstractions.csproj
KitLib.Cheat/: CheatRestartState.cs  CheatRunState.cs  CheatTabRegistration.cs  KitLib.Cheat.csproj  KitLib.Cheat.json  ModuleEntry.cs
KitLib.Dev/: DevTabRegistration.cs  KitLib.Dev.csproj  KitLib.Dev.json  ModuleEntry.cs
KitLib.Features/: KitLib.Features.csproj  KitLib.Features.json
KitLib.Panel/: KitLib.Panel.csproj  KitLib.Panel.json  ModuleEntry.cs
KitLib.Shared/: KitLib.Shared.csproj  KitLib.Shared.json
KitLib.User/: KitLib.User.csproj  KitLib.User.json  ModuleEntry.cs  UserTabRegistration.cs
assets/: readme.nexus.txt  readme.steam.en.txt  readme.steam.txt  readme.steam.zh-CN.txt
tools/codex-crawl/: .gitignore  README.md  pyproject.toml  run-overnight.ps1  run-resume.ps1  uv.toml
tools/codex-crawl/codex_crawl/: __init__.py  __main__.py  cli.py  client.py  db.py  export_macro.py  paths.py  versioning.py
tools/codex-train/: README.md  pyproject.toml
tools/codex-train/codex_train/: __init__.py  cli.py  eval_holdout.py  paths.py  train_priors.py  util.py
(+1422 files in other folders)
