[project]
name = "kitlib-dev"
version = "0.0.0"
description = "Development tooling for the KitLib mod repository."
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pre-commit>=3.7.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.black]
line-length = 180
target-version = ["py310"]
