[project]
name = "codex-crawl"
version = "0.1.0"
description = "Crawl Spire Codex runs for DevMode AI offline training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.scripts]
codex-crawl = "codex_crawl.cli:main"

[dependency-groups]
train = [
    "pandas>=2.2",
    "pyarrow>=18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_crawl"]

[tool.uv]
default-groups = []
