[project]
name = "codex-train"
version = "0.1.0"
description = "Train DevMode AI priors from Spire Codex macro data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=18",
    "numpy>=2.0",
]

[project.scripts]
codex-train = "codex_train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_train"]
